{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 38,
  "lineage": "6edbb45e-aee8-6497-471d-542992bee7e4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-06a0816aadf9379d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "id": "subnet-06a0816aadf9379d7",
            "map_public_ip_on_launch": false,
            "owner_id": "781679968553",
            "state": "available",
            "tags": {
              "Name": "iamgroot-private-us-gov-west-1a",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-0350fcb059845d32d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "id": "subnet-0350fcb059845d32d",
            "map_public_ip_on_launch": false,
            "owner_id": "781679968553",
            "state": "available",
            "tags": {
              "Name": "iamgroot-private-us-gov-west-1b",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-02219f73228a69c52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1c",
            "availability_zone_id": "usgw1-az3",
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "id": "subnet-02219f73228a69c52",
            "map_public_ip_on_launch": false,
            "owner_id": "781679968553",
            "state": "available",
            "tags": {
              "Name": "iamgroot-private-us-gov-west-1c",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-06a0816aadf9379d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "id": "subnet-06a0816aadf9379d7",
            "map_public_ip_on_launch": false,
            "owner_id": "781679968553",
            "state": "available",
            "tags": {
              "Name": "iamgroot-private-us-gov-west-1a",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-0350fcb059845d32d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "id": "subnet-0350fcb059845d32d",
            "map_public_ip_on_launch": false,
            "owner_id": "781679968553",
            "state": "available",
            "tags": {
              "Name": "iamgroot-private-us-gov-west-1b",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-02219f73228a69c52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1c",
            "availability_zone_id": "usgw1-az3",
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "id": "subnet-02219f73228a69c52",
            "map_public_ip_on_launch": false,
            "owner_id": "781679968553",
            "state": "available",
            "tags": {
              "Name": "iamgroot-private-us-gov-west-1c",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "inet-gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:internet-gateway/igw-01056f5a8ce0d267e",
            "id": "igw-01056f5a8ce0d267e",
            "owner_id": "781679968553",
            "tags": {
              "Name": "iamgroot-public-inet-gw",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02d7933f4ebd88360",
            "owner_id": "781679968553",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "iamgroot-pri_net_rtbl",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c7099724c39176b0",
            "owner_id": "781679968553",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01056f5a8ce0d267e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iamgroot-public-rtbl",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_internet_gateway.inet-gateway",
            "aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0594d803ab2e4e052",
            "owner_id": "781679968553",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01056f5a8ce0d267e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iamgroot-public-rtbl",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_internet_gateway.inet-gateway",
            "aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d219cecbe70202d5",
            "owner_id": "781679968553",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01056f5a8ce0d267e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iamgroot-public-rtbl",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_internet_gateway.inet-gateway",
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_net_route_table_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e801c07b7b329e2c",
            "route_table_id": "rtb-02d7933f4ebd88360",
            "subnet_id": "subnet-06a0816aadf9379d7"
          },
          "dependencies": [
            "aws_route_table.pri_route_table",
            "aws_subnet.pri_subnet",
            "aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0208d20800f8873e8",
            "route_table_id": "rtb-02d7933f4ebd88360",
            "subnet_id": "subnet-0350fcb059845d32d"
          },
          "dependencies": [
            "aws_route_table.pri_route_table",
            "aws_subnet.pri_subnet",
            "aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edd1ed49b23207c3",
            "route_table_id": "rtb-02d7933f4ebd88360",
            "subnet_id": "subnet-02219f73228a69c52"
          },
          "dependencies": [
            "aws_route_table.pri_route_table",
            "aws_subnet.pri_subnet",
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7eca486635c81f8",
            "route_table_id": "rtb-0c7099724c39176b0",
            "subnet_id": "subnet-0457ea7c09c07f579"
          },
          "dependencies": [
            "aws_internet_gateway.inet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_net",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7eca486635c81f8",
            "route_table_id": "rtb-0c7099724c39176b0",
            "subnet_id": "subnet-0457ea7c09c07f579"
          },
          "dependencies": [
            "aws_internet_gateway.inet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084476a9eb520d964",
            "route_table_id": "rtb-0c7099724c39176b0",
            "subnet_id": "subnet-02df883a72968eb9e"
          },
          "dependencies": [
            "aws_internet_gateway.inet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0354a9e779eee874a",
            "route_table_id": "rtb-0c7099724c39176b0",
            "subnet_id": "subnet-0b23048990342b0ea"
          },
          "dependencies": [
            "aws_internet_gateway.inet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:security-group/sg-06daab3f3887dacf3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06daab3f3887dacf3",
            "ingress": [],
            "name": "iamgroot-ec2-api",
            "name_prefix": "",
            "owner_id": "781679968553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iamgroot-private-ec2-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_elb_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:security-group/sg-0363f0e61817ffb68",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0363f0e61817ffb68",
            "ingress": [],
            "name": "iamgroot-elb-api",
            "name_prefix": "",
            "owner_id": "781679968553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iamgroot-private-elb-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_ec2_api_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1280537779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06daab3f3887dacf3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.private_ec2_api",
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_ec2_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3492188694",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06daab3f3887dacf3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.private_ec2_api",
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_elb_api_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2666852900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0363f0e61817ffb68",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.private_elb_api",
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_elb_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3198104439",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0363f0e61817ffb68",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.private_elb_api",
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-06a0816aadf9379d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06a0816aadf9379d7",
            "map_public_ip_on_launch": false,
            "owner_id": "781679968553",
            "tags": {
              "Name": "iamgroot-private-us-gov-west-1a",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-0350fcb059845d32d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0350fcb059845d32d",
            "map_public_ip_on_launch": false,
            "owner_id": "781679968553",
            "tags": {
              "Name": "iamgroot-private-us-gov-west-1b",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-02219f73228a69c52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1c",
            "availability_zone_id": "usgw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-02219f73228a69c52",
            "map_public_ip_on_launch": false,
            "owner_id": "781679968553",
            "tags": {
              "Name": "iamgroot-private-us-gov-west-1c",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-0457ea7c09c07f579",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.0.7.0/26",
            "id": "subnet-0457ea7c09c07f579",
            "map_public_ip_on_launch": true,
            "owner_id": "781679968553",
            "tags": {
              "Name": "iamgroot-public-us-gov-west-1a",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-02df883a72968eb9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.0.8.0/26",
            "id": "subnet-02df883a72968eb9e",
            "map_public_ip_on_launch": true,
            "owner_id": "781679968553",
            "tags": {
              "Name": "iamgroot-public-us-gov-west-1a",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-0b23048990342b0ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1c",
            "availability_zone_id": "usgw1-az3",
            "cidr_block": "10.0.9.0/26",
            "id": "subnet-0b23048990342b0ea",
            "map_public_ip_on_launch": true,
            "owner_id": "781679968553",
            "tags": {
              "Name": "iamgroot-public-us-gov-west-1a",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:vpc/vpc-0e5134290eaeec1e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e87424fab59e8a1f",
            "default_route_table_id": "rtb-01345abb5a9bc5e00",
            "default_security_group_id": "sg-027caadf5f6d943df",
            "dhcp_options_id": "dopt-f9656e9d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e5134290eaeec1e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01345abb5a9bc5e00",
            "owner_id": "781679968553",
            "tags": {
              "Name": "iamgroot",
              "kubernetes.io/cluster/iamgroot": "owned"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:vpc-endpoint/vpce-0a5d28b28f39e49b5",
            "dns_entry": [
              {
                "dns_name": "vpce-0a5d28b28f39e49b5-sf48qg27.elasticloadbalancing.us-gov-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12529ZODG2B6H"
              },
              {
                "dns_name": "vpce-0a5d28b28f39e49b5-sf48qg27-us-gov-west-1c.elasticloadbalancing.us-gov-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12529ZODG2B6H"
              },
              {
                "dns_name": "vpce-0a5d28b28f39e49b5-sf48qg27-us-gov-west-1a.elasticloadbalancing.us-gov-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12529ZODG2B6H"
              },
              {
                "dns_name": "vpce-0a5d28b28f39e49b5-sf48qg27-us-gov-west-1b.elasticloadbalancing.us-gov-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12529ZODG2B6H"
              },
              {
                "dns_name": "elasticloadbalancing.us-gov-west-1.amazonaws.com",
                "hosted_zone_id": "Z0838746VR920K6QDVUH"
              }
            ],
            "id": "vpce-0a5d28b28f39e49b5",
            "network_interface_ids": [
              "eni-0041563b385b5e80b",
              "eni-036cef819849aac1c",
              "eni-07d2f8d0d858a01b2"
            ],
            "owner_id": "781679968553",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06daab3f3887dacf3"
            ],
            "service_name": "com.amazonaws.us-gov-west-1.elasticloadbalancing",
            "state": "available",
            "subnet_ids": [
              "subnet-02219f73228a69c52",
              "subnet-0350fcb059845d32d",
              "subnet-06a0816aadf9379d7"
            ],
            "tags": {
              "Name": "iamgroot-elb-vpce"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_security_group.private_ec2_api",
            "aws_subnet.pri_subnet",
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "private_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:vpc-endpoint/vpce-0e0c9ad0496fffbf5",
            "dns_entry": [
              {
                "dns_name": "vpce-0e0c9ad0496fffbf5-vgdsx6y8.ec2.us-gov-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12529ZODG2B6H"
              },
              {
                "dns_name": "vpce-0e0c9ad0496fffbf5-vgdsx6y8-us-gov-west-1c.ec2.us-gov-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12529ZODG2B6H"
              },
              {
                "dns_name": "vpce-0e0c9ad0496fffbf5-vgdsx6y8-us-gov-west-1a.ec2.us-gov-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12529ZODG2B6H"
              },
              {
                "dns_name": "vpce-0e0c9ad0496fffbf5-vgdsx6y8-us-gov-west-1b.ec2.us-gov-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12529ZODG2B6H"
              },
              {
                "dns_name": "ec2.us-gov-west-1.amazonaws.com",
                "hosted_zone_id": "Z0843976RLCS621DNJYP"
              }
            ],
            "id": "vpce-0e0c9ad0496fffbf5",
            "network_interface_ids": [
              "eni-044325a0e73d4a446",
              "eni-0ee82d5ef6344977f",
              "eni-0ef3ce0bc491e7b09"
            ],
            "owner_id": "781679968553",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06daab3f3887dacf3"
            ],
            "service_name": "com.amazonaws.us-gov-west-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-02219f73228a69c52",
              "subnet-0350fcb059845d32d",
              "subnet-06a0816aadf9379d7"
            ],
            "tags": {
              "Name": "iamgroot-ec2-vpce"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_security_group.private_ec2_api",
            "aws_subnet.pri_subnet",
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "private_s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:vpc-endpoint/vpce-05b057e9c4354ec7d",
            "cidr_blocks": [
              "52.95.142.0/23",
              "52.95.144.0/24",
              "108.175.48.0/22",
              "108.175.56.0/22"
            ],
            "id": "vpce-05b057e9c4354ec7d",
            "owner_id": "781679968553",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-65a5400c",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-gov-west-1.s3",
            "state": "available",
            "tags": {
              "Name": "iamgroot-pri-s3-vpce",
              "kubernetes.io/cluster/iamgroot": "owned"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e5134290eaeec1e3"
          },
          "dependencies": [
            "aws_vpc.cluster_vpc"
          ]
        }
      ]
    }
  ]
}